<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Eliminar">

    <Button
        android:id="@+id/bttnBuscar3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/bttn_redondo_red"
        android:onClick="Eliminar"
        android:text="@string/eliminar"
        android:textColor="#F73030"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIDDelete" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtIDDelete"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="190dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/TuInfo"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnBuscarD" />

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="225dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/nombreD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nombre"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:textAlignment="textStart"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/apellidoD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/apellido"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:textAlignment="textStart"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/edadD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtEdad"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/edad"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:textAlignment="textStart"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/generoD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtGenero"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/genero"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:textAlignment="textStart"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bttnBuscarD"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bttn_redondo_black"
        android:onClick="buscarDelete"
        android:text="@string/buscar"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIDDelete" />
</androidx.constraintlayout.widget.ConstraintLayout>