<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Design.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bttnInsertar"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bttn_redondo_blue"
        android:onClick="Insertar"
        android:text="@string/insertar"
        android:textColor="@color/azul_borde_boton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/bttnLeer"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bttn_redondo_blue"
        android:onClick="Leer"
        android:text="@string/leer"
        android:textColor="@color/azul_borde_boton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnInsertar" />

    <Button
        android:id="@+id/bttnActualizar"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bttn_redondo_blue"
        android:onClick="Actualizar"
        android:text="@string/actualizar"
        android:textColor="@color/azul_borde_boton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnLeer" />

    <Button
        android:id="@+id/bttnBorrar"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bttn_redondo_blue"
        android:onClick="Eliminar"
        android:text="@string/borrar"
        android:textColor="@color/azul_borde_boton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnActualizar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:padding="7dp"
        android:text="@string/inicio"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bienvenida"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/logo_bd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/opciones"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>