<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actualizar">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/update"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreUpdate"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/txtApellidoUpdate"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUpdate" />

    <Button
        android:id="@+id/bttnBuscarUpdate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bttn_redondo_black"
        android:onClick="buscarUpdate"
        android:text="@string/buscar"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoUpdate" />

    <Button
        android:id="@+id/bttnActualizarUpdate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/bttn_redondo_blue"
        android:onClick="Editar"
        android:text="@string/actualizar"
        android:textColor="@color/azul_borde_boton"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="190dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/TuInfo"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnBuscarUpdate" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="355dp"
        android:layout_height="225dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/nombreD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtNombreUpdateAc"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/apellidoD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtApellidoUpdateAc"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/edadD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtEdadUpdateAc"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/edad"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="5dp"
                android:text="@string/generoD"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/txtGeneroUpdateAc"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/fondo_edittext"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/genero"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>