<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insertar">

    <EditText
        android:id="@+id/txtIDCreate"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="number"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGeneroCreate" />

    <EditText
        android:id="@+id/txtNombreCreate"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtApellidoCreate"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreCreate" />

    <EditText
        android:id="@+id/txtEdadCreate"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoCreate" />

    <EditText
        android:id="@+id/txtGeneroCreate"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/fondo_edittext"
        android:ems="10"
        android:hint="@string/genero"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEdadCreate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/inserte"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bttnInsertarBDD"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bttn_redondo_blue"
        android:onClick="Create"
        android:text="@string/insertar"
        android:textColor="@color/azul_borde_boton"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIDCreate" />

</androidx.constraintlayout.widget.ConstraintLayout>